# opencv-cmake-fetchcontent

./: CMakeLists.txt  Makefile  README.md  main.cpp
